# Creation_of_web_applications_in_Python

./: .gitignore  .pre-commit-config.yaml  1.py  LICENSE  Open_lesson.py  README.md  first_1.html  fpdf2.py  main.py  pyproject.toml
Tutorials for JS/: DZ_JS_STOP.docx
Tutorials for JS/module_1_introduction/: first.js  func.js  html_for_jf.html
Tutorials for JS/module_2_OOP/: for_mod_2_less_1.html  module_2_lesson_1.js  module_2_lesson_1_array.js  module_2_lesson_1_object.js  module_2_lesson_1_object_methods.js  module_2_lesson_1_setTimeout.js  module_2_lesson_1_string.js
Tutorials for JS/module_4_BOM_DOM/: module_4_lesson_1_BOM.docx
Tutorials for JS/module_5_forms/: module_5_1.html  module_5_2.html  module_5_3.html
Tutorials for JS/module_8_jQuery/: module_8.html  module_8_input.html  module_8_start.js
Tutorials for Python/: regular_expressions .docx  theory_m_8_git.docx
Tutorials for Python/failed_material/: Open_lesson.py
Tutorials for Python/module_1/: DZ_m_1_1.docx  DZ_m_1_2.docx  DZ_m_1_l_2.docx  m_1_1.py  m_1_l_2.docx  m_1_practice.py
Tutorials for Python/module_1_/: m_1_1.py
Tutorials for Python/module_4_/: m_4_function.py  m_4_l_4_dec.py  m_4_l_4_gen.py  m_4_lesson_3.py  m_4_recursion.py  theory_m_4_function.docx  theory_m_4_lesson_4_dec_gen.docx  theory_m_4_recursion.docx
Tutorials for Python/module_5_/: DZ_Py_Mod_5_tic_tac_toe.docx  m_5.py  m_5_bubble_sort.py  m_5_shell_sort.py  theory_m_5.docx
Tutorials for Python/module_6_/: DZ_Py_Mod_5_dict.docx  DZ_Py_Mod_6_dict.docx  DZ_Py_Mod_6_dict_Skill.docx  DZ_Py_Mod_6_tuple_set.docx  m_6_dict.py  (+4 more)
(+632 files in other folders)
