[tool.poetry]
name = "course creating web applications with python"
version = "0.1.0"
description = ""
authors = ["KrivovDE <55reigen55@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
tqdm = "^4.64.1"
slugify = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
